--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,20 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0" />
-    <title>Stencil Component Starter</title>
+    <title>sg-table Component</title>
 
     <script type="module" src="/build/sg-table.esm.js"></script>
     <script nomodule src="/build/sg-table.js"></script>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="https://cdn.datatables.net/v/dt/dt-2.1.8/datatables.min.js"></script>
+
   </head>
   <body>
-    <my-component first="Stencil" middle="'Don't call me a framework'" last="JS"></my-component>
+    test 
+    <sg-table data-url='https://microsoftedge.github.io/Demos/json-dummy-data/128KB.json' info=true print=true searching=true paging=true ordering=true  theme="darkBlue"></sg-table>
+
+
+    Test Data
   </body>
 </html>
